--- a/index.html
+++ b/index.html
@@ -34,6 +34,6 @@
   	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
   	<script type="text/javascript" src="jQuery_mousewheel_plugin.js"></script>
   	<script type="text/javascript" src="pad.js"></script>
-  	<script type="text/javascript" src="db.js"></script>  
+  	<!--<script type="text/javascript" src="db.js"></script>-->
   </body>
 </html>
